manifests/apps/ops/base/nash/nash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nash
  labels:
    app: nash
spec:
  selector:
    matchLabels:
      app: nash
  template:
    metadata:
      labels:
        app: nash
    spec:
      containers:
      - name: nash
        image: ghcr.io/k-wa-wa/nash
        ports:
        - containerPort: 8080
        command: ["/nash", "--config", "/root/.ssh/config"]
        volumeMounts:
        - name: ssh-config-volume
          mountPath: /root/.ssh/config
          subPath: ssh_config
      volumes:
      - name: ssh-config-volume
        secret:
          secretName: ssh-config
          defaultMode: 0400
---
apiVersion: v1
kind: Service
metadata:
  name: nash
spec:
  selector:
    app: nash
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
